# actix-todo

./: .env  Cargo.toml  README.md  database.sql  docker-compose.yml
migrations/2020-07-22-161248_create_lists/: down.sql  up.sql
migrations/2020-07-22-161257_create_items/: down.sql  up.sql
src/: actions.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
