[package]
name = "actix-todo"
version = "0.1.0"
authors = ["Yasuhiro Suzuki <yasszu@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"